--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -82,306 +83,6 @@ nav {
     color: white;
 }
 
-/* carousel */
-.carousel {
-    width: 100%;
-    height: 100dvh;
-    overflow: hidden;
-    position: relative;
-}
-
-.carousel .list .item {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    inset: 0 0 0 0;
-}
-
-.carousel .list .item img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.carousel .list .item .content {
-    position: absolute;
-    top: 20%;
-    width: 1140px;
-    max-width: 80%;
-    left: 50%;
-    transform: translateX(-50%);
-    padding-right: 30%;
-    box-sizing: border-box;
-    color: rgb(255, 145, 0);
-    text-shadow: 0 5px 10px #0004;
-}
-
-.carousel .list .item .author {
-    font-weight: bold;
-    letter-spacing: 10px;
-}
-
-.carousel .list .item .title,
-.carousel .list .item .topic {
-    font-size: 5em;
-    font-weight: bold;
-    line-height: 1.3em;
-}
-
-.carousel .list .item .topic {
-    color: #f1683a;
-}
-
-.carousel .list .item .buttons {
-    display: grid;
-    grid-template-columns: repeat(2, 130px);
-    grid-template-rows: 40px;
-    gap: 5px;
-    margin-top: 20px;
-}
-
-.carousel .list .item .buttons button {
-    border: none;
-    background-color: #eee;
-    letter-spacing: 3px;
-    font-family: Poppins;
-    font-weight: 500;
-    border-radius: 5px;
-}
-
-.carousel .list .item .buttons button:hover {
-    filter: invert(100%);
-    cursor: pointer;
-}
-
-.carousel .list .item .buttons button:nth-child(2) {
-    background-color: transparent;
-    border: 1px solid #fff;
-    color: #eee;
-}
-
-/* thumbnail */
-.thumbnail {
-    position: absolute;
-    bottom: 50px;
-    left: 50%;
-    width: max-content;
-    z-index: 100;
-    display: flex;
-    gap: 20px;
-    visibility: hidden;
-}
-
-.thumbnail .item {
-    width: 150px;
-    height: 220px;
-    flex-shrink: 0;
-    position: relative;
-}
-
-.thumbnail .item img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 20px;
-}
-
-.thumbnail .item .content {
-    color: #000000;
-    position: absolute;
-    bottom: 10px;
-    left: 10px;
-    right: 10px;
-}
-
-.thumbnail .item .content .title {
-    font-weight: 500;
-}
-
-.thumbnail .item .content .description {
-    font-weight: 300;
-}
-
-/* arrows */
-.arrows {
-    position: absolute;
-    top: 80%;
-    right: 52%;
-    z-index: 100;
-    width: 300px;
-    max-width: 30%;
-    display: flex;
-    gap: 10px;
-    align-items: center;
-}
-
-.arrows button {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    background-color: #eee4;
-    border: none;
-    color: #fff;
-    font-family: monospace;
-    font-weight: bold;
-    transition: .3s;
-    cursor: pointer;
-}
-
-.arrows button:hover {
-    background-color: #fff;
-    color: #000;
-}
-
-/* animation */
-.carousel .list .item:nth-child(1) {
-    z-index: 1;
-}
-
-/* animation text in first item */
-
-.carousel .list .item:nth-child(1) .content .author,
-.carousel .list .item:nth-child(1) .content .title,
-.carousel .list .item:nth-child(1) .content .topic,
-.carousel .list .item:nth-child(1) .content .des,
-.carousel .list .item:nth-child(1) .content .buttons {
-    transform: translateY(50px);
-    filter: blur(20px);
-    opacity: 0;
-    animation: showContent .1s 0.5s linear 1 forwards;
-}
-
-@keyframes showContent {
-    to {
-        transform: translateY(0px);
-        filter: blur(0px);
-        opacity: 1;
-    }
-}
-
-.carousel .list .item:nth-child(1) .content .title {
-    animation-delay: 1s !important;
-}
-
-.carousel .list .item:nth-child(1) .content .topic {
-    animation-delay: 1.1s !important;
-}
-
-.carousel .list .item:nth-child(1) .content .des {
-    animation-delay: 1.2s !important;
-}
-
-.carousel .list .item:nth-child(1) .content .buttons {
-    animation-delay: 1.4s !important;
-}
-
-/* create animation when next click */
-.carousel.next .list .item:nth-child(1) img {
-    width: 150px;
-    height: 220px;
-    position: absolute;
-    bottom: 50px;
-    left: 50%;
-    border-radius: 30px;
-    animation: showImage .5s linear 1 forwards;
-}
-
-@keyframes showImage {
-    to {
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        border-radius: 0;
-    }
-}
-
-.carousel.next .thumbnail .item:nth-last-child(1) {
-    overflow: hidden;
-    animation: showThumbnail .5s linear 1 forwards;
-}
-
-.carousel.prev .list .item img {
-    z-index: 100;
-}
-
-@keyframes showThumbnail {
-    from {
-        width: 0;
-        opacity: 0;
-    }
-}
-
-.carousel.next .thumbnail {
-    animation: effectNext .5s linear 1 forwards;
-}
-
-@keyframes effectNext {
-    from {
-        transform: translateX(150px);
-    }
-}
-
-/* prev click */
-
-.carousel.prev .list .item:nth-child(2) {
-    z-index: 2;
-}
-
-.carousel.prev .list .item:nth-child(2) img {
-    animation: outFrame 0.5s linear 1 forwards;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-}
-
-@keyframes outFrame {
-    to {
-        width: 150px;
-        height: 220px;
-        bottom: 50px;
-        left: 50%;
-        border-radius: 20px;
-    }
-}
-
-.carousel.prev .thumbnail .item:nth-child(1) {
-    overflow: hidden;
-    opacity: 0;
-    animation: showThumbnail .5s linear 1 forwards;
-}
-
-.carousel.next .arrows button,
-.carousel.prev .arrows button {
-    pointer-events: none;
-}
-
-.carousel.prev .list .item:nth-child(2) .content .author,
-.carousel.prev .list .item:nth-child(2) .content .title,
-.carousel.prev .list .item:nth-child(2) .content .topic,
-.carousel.prev .list .item:nth-child(2) .content .des,
-.carousel.prev .list .item:nth-child(2) .content .buttons {
-    animation: contentOut 1.5s linear 1 forwards !important;
-}
-
-@keyframes contentOut {
-    to {
-        transform: translateY(-150px);
-        filter: blur(20px);
-        opacity: 0;
-    }
-}
-
-@media screen and (max-width: 678px) {
-    .carousel .list .item .content {
-        padding-right: 0;
-    }
-
-    .carousel .list .item .content .title {
-        font-size: 30px;
-    }
-}
-
 footer {
     background-color: #333;
     color: #fff;
@@ -440,9 +141,7 @@ footer {
 
 .footer-social-icons img {
     height: 24px;
-    /* Adjust the size as needed */
     width: auto;
-    /* Adjust the size as needed */
 }
 
 /* Media Queries */
@@ -465,65 +164,25 @@ footer {
     section h3 {
         font-size: 1.8em;
     }
+
+    .nav-links {
+        flex-direction: column;
+        gap: 0.5rem;
+    }
+
+    .nav-link {
+        padding: 0.5rem;
+        width: 100%;
+        text-align: center;
+    }
 }
 
 .hidden {
     display: none;
 }
 
-.about-us{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: flex-start;
-    height: auto;
-    border-bottom: 1px solid rgb(195, 195, 195);
-    margin: 0 50px 40px 50px;
-}
-
-.about-us-content-wrapper,
-.our-objective-content-wrapper {
-    display: flex;
-    flex-direction: column;
-    max-width: 50%;
-    margin: 40px 0 50px 0;
-    padding: 10px;
-}
-
-#about-us-title,
-#our-objective-title {
-    font-size: 2.5em;
-    background: linear-gradient(to right, rgb(55, 55, 55), rgb(205, 205, 205));
-    -webkit-background-clip: text;
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-    margin-bottom: 20px;
-    text-shadow: 
-        1px 1px 2px rgba(0, 0, 0, 0.4),
-        1px 1px 2px rgba(0, 0, 0, 0.2);
-}
-
-.about-us-content,
-.our-objective-content {
-    font-size: 1.4em;
-    line-height: 1.5;
-    color: rgb(76, 76, 76);
-}
-
-.about-us-image img,
-.our-objective-image img {
-    width: auto;
-    height: 300px;
-    margin-left: 20px;
-}
-.our-objective {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: flex-start;
-    height: auto;
-    margin: 40px 50px;
-}
+.about-us,
+.our-objective,
 .our-vision {
     display: flex;
     flex-direction: row;
@@ -532,6 +191,46 @@ footer {
     height: auto;
     border-bottom: 1px solid rgb(195, 195, 195);
     margin: 40px 50px;
+}
+
+.about-us-content-wrapper,
+.our-objective-content-wrapper,
+.our-vision-content-wrapper {
+    display: flex;
+    flex-direction: column;
+    max-width: 50%;
+    margin: 40px 0 50px 0;
+    padding: 10px;
+}
+
+#about-us-title,
+#our-objective-title,
+#our-vision-title {
+    font-size: 2.5em;
+    background: linear-gradient(to right, rgb(55, 55, 55), rgb(205, 205, 205));
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    margin-bottom: 20px;
+    text-shadow:
+        1px 1px 2px rgba(0, 0, 0, 0.4),
+        1px 1px 2px rgba(0, 0, 0, 0.2);
+}
+
+.about-us-content,
+.our-objective-content,
+.our-vision-content {
+    font-size: 1.4em;
+    line-height: 1.5;
+    color: rgb(76, 76, 76);
+}
+
+.about-us-image img,
+.our-objective-image img,
+.our-vision-image img {
+    width: auto;
+    height: 300px;
+    margin-left: 20px;
 }
 
 .our-vision-image {
@@ -545,42 +244,17 @@ footer {
     height: 400px;
 }
 
-.our-vision-content-wrapper {
-    flex: 2;
-    display: flex;
-    flex-direction: column;
-    max-width: 50%;
-    margin: 40px 0 50px 0;
-    padding: 10px;
-}
-
-#our-vision-title {
-    font-size: 2.5em;
-    background: linear-gradient(to right, rgb(55, 55, 55), rgb(205, 205, 205));
-    -webkit-background-clip: text;
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-    margin-bottom: 20px;
-    text-shadow: 
-        1px 1px 2px rgba(0, 0, 0, 0.4),
-        1px 1px 2px rgba(0, 0, 0, 0.2);
-}
-
-.our-vision-content {
-    font-size: 1.4em;
-    line-height: 1.5;
-    color: rgb(76, 76, 76);
-}
-
 /* Container to use flex for centering */
 .slideshow-container {
-    margin-top: 60px;
+    margin-top: 70px;
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
     max-width: 100%;
     height: 480px;
+    margin-left: 30px;
+    margin-right: 30px;
     overflow: hidden;
     border-radius: 15px;
 }
@@ -590,21 +264,21 @@ footer {
     width: 100%;
     height: 100%;
     position: absolute;
-    transition: transform 0.6s ease-in-out, opacity 0.6s ease-in-out; /* Smooth sliding and fading effect */
+    transition: transform 0.6s ease-in-out, opacity 0.6s ease-in-out;
 }
 
 .slide-enter {
-    transform: translateX(100%); /* Slide in from the right */
+    transform: translateX(100%);
     opacity: 0;
 }
 
 .slide-exit {
-    transform: translateX(-100%); /* Slide out to the left */
+    transform: translateX(-100%);
     opacity: 0;
 }
 
 .slide-enter-active {
-    transform: translateX(0); /* Final position */
+    transform: translateX(0);
     opacity: 1;
 }
 
@@ -613,17 +287,29 @@ footer {
     opacity: 0;
 }
 
-/* Optionally add keyframes for more control over sliding animations */
 @keyframes slide-in {
-    from { transform: translateX(100%); opacity: 0; }
-    to { transform: translateX(0); opacity: 1; }
+    from {
+        transform: translateX(100%);
+        opacity: 0;
+    }
+
+    to {
+        transform: translateX(0);
+        opacity: 1;
+    }
 }
 
 @keyframes slide-out {
-    from { transform: translateX(0); opacity: 1; }
-    to { transform: translateX(-100%); opacity: 0; }
-}
+    from {
+        transform: translateX(0);
+        opacity: 1;
+    }
 
+    to {
+        transform: translateX(-100%);
+        opacity: 0;
+    }
+}
 
 .mySlides img {
     width: 100%;
@@ -635,29 +321,30 @@ footer {
 .text {
     color: black;
     font-size: 15px;
-    padding: 8px 120px;
     margin-bottom: 50px;
     position: absolute;
     bottom: 8px;
     width: 100%;
-    text-align:start;
+    margin-left: 10px;
+    text-align: start;
 }
 
-/* Additional styling for title and description */
 .slide-title {
     font-size: 24px;
     font-weight: bold;
     margin: 5px 0;
-    color:black;
+    color: black;
+    width: 100%;
 }
 
 .slide-description {
     font-size: 14px;
     margin: 5px 0;
+    width: 100%;
 }
 
-/* Prev & Next buttons */
-.prev, .next {
+.prev,
+.next {
     cursor: pointer;
     position: absolute;
     top: 50%;
@@ -672,14 +359,19 @@ footer {
     filter: opacity(100%);
 }
 
-.prev:hover, .next:hover {
+.prev:hover,
+.next:hover {
     background-color: #d5fd5cc8;
 }
 
-.prev { left: 0; }
-.next { right: 0; }
+.prev {
+    left: 0;
+}
 
-/* Dots */
+.next {
+    right: 0;
+}
+
 .dot {
     cursor: pointer;
     height: 15px;
@@ -691,19 +383,87 @@ footer {
     transition: background-color 0.6s ease;
 }
 
-.active, .dot:hover {
+.active,
+.dot:hover {
     background-color: #78d0ff;
 }
 
-
 @keyframes fade {
-    from { opacity: .4; }
-    to { opacity: 1; }
+    from {
+        opacity: .4;
+    }
+
+    to {
+        opacity: 1;
+    }
 }
 
-/* On smaller screens, decrease text size */
 @media only screen and (max-width: 300px) {
-    .prev, .next, .text {
+
+    .prev,
+    .next,
+    .text {
         font-size: 11px;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .slideshow-container {
+        height: 400px;
+    }
+
+    .slide-description {
+        display: none;
+    }
+
+    .slide-title {
+        font-size: large;
+    }
+
+    .text {
+        margin-bottom: 20px;
+        text-align: center;
+    }
+
+    .about-us,
+    .our-objective,
+    .our-vision {
+        flex-direction: column;
+        align-items: center;
+        margin: 20px;
+    }
+
+    .about-us-content-wrapper,
+    .our-objective-content-wrapper,
+    .our-vision-content-wrapper {
+        max-width: 100%;
+        text-align: center;
+    }
+
+    .about-us-image img,
+    .our-objective-image img,
+    .our-vision-image img {
+        height: auto;
+        width: 100%;
+        margin-left: 0;
+        margin-top: 20px;
+    }
+
+    .about-us {
+        flex-direction: column-reverse;
+    }
+
+    footer {
+        gap: 20px;
+
+    }
+
+    .footer-section-innovation,
+    .footer-section-excellence {
+        align-items: flex-start;
+        text-align: left;
+    }
+    .our-objective{
+        flex-direction: column-reverse;
     }
 }
