--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -308,3 +308,124 @@
 .portfolio-body .highlight2 {
     color: #007CBE; 
 }
+
+@media screen and (max-width: 810px) {
+    .welcome-banner {
+        padding: 20px;
+    }
+
+    .welcome-banner h1 {
+        font-size: 28px;
+    }
+
+    .welcome-banner p {
+        font-size: 18px;
+    }
+
+    .about-us {
+        flex-direction: column;
+        padding: 20px;
+        margin: 20px;
+    }
+
+    .about-us-image {
+        max-width: 100%;
+        margin-bottom: 20px;
+    }
+
+    .about-us-content {
+        max-width: 100%;
+    }
+
+    .about-us-content h2 {
+        font-size: 2rem;
+    }
+
+    .about-us-content p {
+        font-size: 1.2rem;
+        text-align: justify;
+    }
+
+    .about-us-followers {
+        flex-direction: column;
+        align-items: center;
+        display: none;
+    }
+
+    .about-us-followers-item {
+        margin-bottom: 20px;
+    }
+
+    .portfolio-body h3 {
+        font-size: 1.5em;
+    }
+
+    .portfolio-body h2 {
+        font-size: 2em;
+    }
+
+    .card-col {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .card-col a img {
+        height: auto;
+        width: 100%;
+    }
+
+    .scroll-button {
+        justify-content: center;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .welcome-banner {
+        padding: 10px;
+    }
+
+    .welcome-banner h1 {
+        font-size: 24px;
+    }
+
+    .welcome-banner p {
+        font-size: 16px;
+    }
+
+    .about-us {
+        padding: 10px;
+        margin: 10px;
+    }
+
+    .about-us-content h2 {
+        font-size: 1.5rem;
+    }
+
+    .about-us-content p {
+        font-size: 1rem;
+    }
+
+    .about-us-followers-item h3 {
+        font-size: 0.8rem;
+    }
+
+    .about-us-followers-item p {
+        font-size: 1.2rem;
+    }
+
+    .portfolio-body h3 {
+        font-size: 1.2em;
+    }
+
+    .portfolio-body h2 {
+        font-size: 1.5em;
+    }
+
+    .card-col a img {
+        height: auto;
+        width: 100%;
+    }
+    .card-col a:nth-child(n+2){
+        display:none;
+    }
+}
