--- a/css/whatwedo.css
+++ b/css/whatwedo.css
@@ -65,7 +65,6 @@
     cursor: pointer;
 }
 
-
 h1 {
     text-align: center;
     font-size: 36px;
@@ -414,4 +413,79 @@ hr {
 .join-us-button:after{
     background-color:white;
     color:black;
+}
+
+/* Media Queries for Responsive Design */
+@media only screen and (max-width: 810px) {
+    .boxes {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .box {
+        width: 80%;
+        margin-bottom: 20px;
+    }
+
+    .web-chart {
+        width: calc(100% - 40px);
+        height: auto;
+        flex-direction: column;
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+
+    .task {
+        width: 80%;
+        height: auto;
+        margin-bottom: 20px;
+        margin-top: 20px;
+        position: static;
+        transform: none;
+    }
+
+    .central-task {
+        transform: none;
+    }
+
+    .sidebar {
+        width: 100%;
+        height: auto;
+        position: relative;
+    }
+
+    .main-content {
+        margin-left: 0;
+    }
+
+    .scope-container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .scope-box {
+        width: 80%;
+    }
+
+    .why-join-container {
+        flex-direction: column;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .title, .activity-title, #all-projects h1, #why-join-us h1 {
+        font-size: 24px;
+    }
+
+    .scope-box {
+        width: 100%;
+    }
+
+    .why-join-container {
+        padding: 10px;
+    }
+
+    .why-join-benefits {
+        padding: 10px;
+    }
 }
