--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -433,12 +433,16 @@
         display:none;
     }
 }
-@media screen and (max-width: 1600px) {
+@media screen and (max-width: 1200px) {
     .welcome-banner{
         height: 70vh;
     }
     .portfolio-body {
         margin: 50px 20px;
+    }
+    .about-us-content p {
+        font-size: 1.2rem;
+        text-align: justify;
     }
 
     .portfolio-body h3 {
