--- a/css/header-footer-common.css
+++ b/css/header-footer-common.css
@@ -200,7 +200,7 @@ footer {
     /** make sure this is the highest value compared to all other divs **/
     top: 0;
     left: 0;
-    background: #191f26;
+    background: white;
     display: flex;
     justify-content: center;
     align-items: center;
