--- a/css/blog.css
+++ b/css/blog.css
@@ -64,9 +64,7 @@ body {
 
 /* Recent Posts Section */
 .recent-posts {
-  margin-top: 40px;
-  padding: 3rem;
-  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.05);
+  padding: 0 3rem  3rem 3rem;
   border-radius: 12px;
 }
 
@@ -142,4 +140,31 @@ body {
   .trending-posts .posts-slider {
     flex-direction: column;
   }
+}
+.btn {
+  background-color: #ff6600;
+  color: white;
+  font-weight: 600;
+  padding: 12px 24px;
+  border: none;
+  border-radius: 25px;
+  cursor: pointer;
+  font-size: 14px;
+  margin-top: 20px;
+  transition: background-color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+.btn:hover {
+  background-color: #ff4500;
+  transform: translateY(-3px);
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+}
+
+.container-btn {
+  margin-top: 40px;
+  background: transparent;
+  display: flex;
+  justify-content: end;
+  margin-right: 10px;
 }
