--- a/css/style.css
+++ b/css/style.css
@@ -326,7 +326,7 @@ footer {
     bottom: 8px;
     width: 100%;
     margin-left: 10px;
-    text-align: start;
+    text-align: center;
 }
 
 .slide-title {
