--- a/css/whatwedo.css
+++ b/css/whatwedo.css
@@ -209,7 +209,20 @@ button:hover {
         width: 100%;
     } */
 }
-
+@media (max-width: 445px) {
+    .time {
+        font-size: 2rem;
+    }
+    .label {
+        font-size: 0.8rem;
+    }
+    .workshop-title {
+        font-size: 1.5rem;
+    }
+    .workshop-subtitle {
+        font-size: 1rem;
+    }
+}
 .highlight {
     font-family: 'Kodchasan';
     color: black;
